# MetalCosmos

./: .gitignore  CMakeLists.txt  opus-master-prompt.md
.claude/handoff/: spec.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: BiquadFilter.cpp  DiodeFeedbackClipper.cpp  DiodeMorpher.cpp  MT2GainStage.cpp  MT2ToneStack.cpp  OnePoleFilter.cpp
scaffold/: Parameters.h
scaffold/DSP/: BiquadFilter.h  DiodeFeedbackClipper.h  DiodeMorpher.h  MT2GainStage.h  MT2ToneStack.h  OnePoleFilter.h
scripts/: validate.sh
tests/: TestMain.cpp  check_output.py
